Fix spacing for attribution text box; add back scholar status on individual views

--- a/app/assets/stylesheets/application/_projects.scss
+++ b/app/assets/stylesheets/application/_projects.scss
@@ -214,5 +214,7 @@ input[type="checkbox"] + label.ss-cb-label {
   font-size: .8rem;
 }
 .project-attribution p {
-  margin-bottom: .5rem;;
+  margin-bottom: .5rem;
+  padding-left: 0.9375rem;
+  padding-right: 0.9875rem;
 }
